--- a/assignment4/phone.css
+++ b/assignment4/phone.css
@@ -1,12 +1,6 @@
-/* make all buttons 20 by 20 pixels with white text and green background and a 10 pixel margin */
-button { width: 150px; height: 75px; background: lightblue; color: white; margin: 10px; }
+button { width: 100px; height: 25px; background: lightblue; color: white; margin: 10px; }
 
-/* make all tags with the "cool" class name have blue text */
-.cool { color: blue; }
-
-/* make the button with ID "delete" red */
-/* #button_dialer { background: red; } */
-
-/* Gesture Tab Styling */
-#gesture_output { border: 3px dotted red; width: 150; margin-bottom: 5px; padding-top: 5px; padding-bottom: 5px; text-align: center; margin-left: 175px;}
-#gesture_area { border: 1px solid black; background: lightgrey; height: 300px; width: 300px; margin-left: 100px; margin-top: 25px}
+.hide {
+  display: none;
+  color: green;
+}
